# rust-web

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  License  Makefile  Readme  index.html
src/: index.html  main  main.rs  models.rs  router.rs  server.rs  static_controller.rs  test  test.rs  todo_controller.rs  utils.rs  views.rs
src/compiler/: index.rs  lexer.rs  view_writer.rs
src/css/: site.css
src/views/: mod.rs  todo_views.rs
src/views/todo/: index.rs  mod.rs
src/web/: main.rs  models.rs  router.rs  static_controller.rs  test.rs  todo_controller.rs  utils.rs
src/web/views/: mod.rs
src/web/views/todo/: detail.rs  index.rs
